--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
         <section class="mb-6">
             <div class="flex justify-between gap-5">
 
-                <div id="img-container" class="grid grid-cols-2 md:grid-cols-3 w-2/3 gap-4 ">
+                <div id="img-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 w-2/3 gap-4 ">
                 </div>
 
 
-                <div id="girdremove" class="grid grid-cols-2 w-1/3 border border-gray-200 ">
-                    <div id="select-item" class="p-2">
+                <div class=" w-1/3 border border-gray-200 bg-lime-200 ">
+                    <div id="right-grid" class="grid grid-cols-1 md:grid-cols-2"  >
 
                     </div>
                 </div>
@@ -98,7 +98,7 @@
         </section>
 
         <!-- Open the modal using ID.showModal() method -->
-        <button id="showModal" class="btn" onclick="my_modal_5.showModal()">open modal</button>
+        <button id="showModal" class="btn" onclick="my_modal_5.showModal()"></button>
         <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
             <div class="modal-box">
                 <div id="modal-content">
